2005-07-27 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb, tdiary/defaultio.rb, tdiary/pstoreio.rb,
	tdiary/tdiary_style.rb, tdiary/filter/default.rb, tdiary/lang/en.rb,
	tdiary/lang/ja.rb, tdiary/lang/zh.rb, theme/base.css: add license.
	* add plugin/10spamfilter.rb and rename 01sp.rb to 50sp.rb.

2005-07-21 zunda <zunda at freeshell.org>
	* tdiary/defaultio.rb DefaultIO#restore(): move rescue clause later:
	  IO#read in ruby-1.8.0 returns not "" but nil when reading over EOF

2005-07-21 TADA Tadashi <sho@spc.gr.jp>
	 * doc/HOWTO-make-plugin.html: correct charset ISO-2022-JP to EUC-JP.

2005-07-20 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.2.

2005-07-19 Yutaka OIWA <y.oiwa at aist.go.jp>
	* doc/HOWTO-make-plugin.html: add about against CSRF attack.

2005-07-07 Yutaka OIWA <y.oiwa at aist.go.jp>
	* tdiary.rb, 00default.rb, skel/*.rhtml, tdiary.conf.sample: against
	CSRF attack.

2005-06-22  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb (apply_plugin): ignore exceptions.

2005-06-19 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix wrong version number.

2005-06-13 TADA Tadashi <sho@spc.gr.jp>
	* skel/diary.rhtml: TSUKKOMI 'Before...' links to '#c00'. thanks Kazuhiro
	  NISHIYAMA <zn at mbf.nifty.com>
	* README.html: s/GPL/GPL2/g
	* theme/base.css: add some sidebar items.

2005-06-13 hahahaha <rin_ne at big.or.jp>
	* index.rb: support 'n days before/after' mode when using
	  ErrorDocument/Action.

2005-06-09 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.1.

2005-06-07 TADA Tadashi <sho@spc.gr.jp>
	* doc/README.html, doc/INSTALL.html: separate INSTALL from README.

2005-06-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/00default.rb: change words in navi_next/prev_ndays.

2005-06-05 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: hide 'n days' navigation and referer accessed by bots.

2005-06-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: add <%=navi%> in footer.
	* plugin/00default.rb: separate navi_user_* methods from navi_user method.