@@ -1,3 +1,7 @@
+2005-08-07 akira yamada <akira at arika.org>
+	* filter/spam.rb: fix bug abut  @max_uris checking.
+	* filter/spam.rb: add checking TLD.
+
 2005-07-27 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/00default.rb, tdiary/defaultio.rb, tdiary/pstoreio.rb,
 	tdiary/tdiary_style.rb, tdiary/filter/default.rb, tdiary/lang/en.rb,
